--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
      font-family: arial;
  } 
  nav ul {
-     background:#004d00;
+     background:#008B8B;
      padding: 0 20px;
      list-style: none;
      position: relative;
