--- a/css/style.css
+++ b/css/style.css
@@ -74,3 +74,10 @@ div {
 .bonus {
 	text-align: center;	 
 }
+@import url('https://fonts.googleapis.com/css?family=Krub');
+h4	{ 
+	 font-family: 'Krub', sans-serif;
+}
+h5	{
+	font-family: 'Krub', sans-serif;
+}
