--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Krub'); 
+.bonus {
+	text-align: center;	 
+}
 
+h4 { 
+	 font-family: 'Krub', sans-serif;
+}
+h5 {
+	font-family: 'Krub', sans-serif;
+}
