--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
      	font-family: arial;
  } 
  nav ul {
-     	background:#008B8B;
+     	background:#6B8E23;
      	padding: 0 20px;
      	list-style: none;
      	position: relative;
