--- a/css/styles.css
+++ b/css/styles.css
@@ -36,4 +36,15 @@ h5 {
 body {
 	background-color: #B0E0E6;
 }
+.gambar {
+	text-align: center;
+}
+
+.judul {
+	text-align: center;
+}
+
+.isi {
+	text-align: center;
+}
 
