--- a/css/styles.css
+++ b/css/styles.css
@@ -37,12 +37,10 @@ body {
 	background-color: #B0E0E6;
 }
 .gambar {
-	text-align: center;
+	float: left;
 }
 
-.judul {
-	text-align: center;
-}
+
 
 .pembatas {
 	background-color: #00CC99;
@@ -51,5 +49,6 @@ body {
 }
 .isi {
 	text-align: center;
+	float: right;
 }
 
