--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css?family=Krub'); 
  nav {
-     	margin:auto;
+     	margin: -17px;
      	text-align: center;
      	width: 100%;
      	font-family: arial;
