--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
  }
 
  nav ul li:hover {
-     	background:#d68d9a;
+     	background-image: https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/Untitled%20design.jpg;
  }
 
  nav ul li:hover a {
