--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
      	font-family: arial;
  } 
  nav ul {
-     	background:#6B8E23;
+     	background-color: https://raw.githubusercontent.com/antoniatonia/antoniatonia.github.io/master/images/Untitled%20design.jpg;
      	padding: 0 20px;
      	list-style: none;
      	position: relative;
