--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ h5 {
 	font-family: 'Krub', sans-serif;
 }
 body {
-	background-color: #B0E0E6;
+	background-color: #DCDCDC;
 }
 .gambar {
 	float: right;
